# updateall

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMMIT_MESSAGE.txt  README.adoc  README.md  codespell_exceptions.txt  justfile  justfile-common-subproject.just
cli/: README.adoc  justfile  pyproject.toml
cli/cli/: __init__.py  main.py  simple.py  validate_plugin.py
cli/tests/: __init__.py  conftest.py  test_cli_options.py  test_main.py
core/: README.adoc  justfile  pyproject.toml
core/core/: __init__.py  config.py  download_manager.py  interfaces.py  metrics.py  models.py  mutex.py  notifications.py  orchestrator.py  parallel_orchestrator.py  remote.py  resource.py  rollback.py  schedule.py  scheduler.py  streaming.py  sudo.py  version.py
core/tests/: __init__.py  test_config.py  test_download_manager.py  test_integration_streaming.py  test_metrics.py  test_models.py  test_mutex.py  test_mutex_helpers.py  test_notifications.py  test_orchestrator.py  test_parallel_orchestrator.py  test_remote.py  test_resource.py  test_rollback.py  test_schedule.py  test_scheduler.py  test_streaming.py  test_sudo.py  test_version.py
docs/: README.md  UI-revision-plan.md  apt-three-step-update-research.md  architecture-refinement-risk-analysis.md  bug-investigation-report.md  cleanup-and-refactoring-plan.md  external-plugin-streaming-protocol.md  interactive-tabs-implementation-plan.md  interactive-tabs-migration-guide.md  interactive-tabs-risk-analysis.md  multi-step-updates-implementation-plan.md  pipx-three-step-upgrade-research.md  plan.md  plugin-development.md  research-rustup-three-phase-update.md  snap-three-step-upgrade.md  statistics-duckdb-plan.md  ui-latency-planning.md  ui-latency-study.md  update-all-architecture-refinement-plan.md  update-all-database-research.md  update-all-duckdb-integration-plan.md  update-all-python-plan.md  update-all-requirements-todo.md  update-all-requirements.md  update-all-statistical-algorithm-research.md  update-all-statistical-modeling-plan.md  update-plugins-api-centralized-download-manager-implementation-plan.md  update-plugins-api-declarative-command-execution-implementation-plan.md  update-plugins-api-mutex-dependency-declaration-implementation-plan.md  update-plugins-api-rewrite.md  update-plugins-api-step-based-execution-implementation-plan.md  update-plugins-api-sudo-declaration-implementation-plan.md  update-plugins-api-version-checking-protocol-implementation-plan.md
docs/archive/: interactive-tabs-architecture-evaluation.md  interactive-tabs-implementation-plan.md
examples/plugins/: README.md  example-bash-plugin.sh  example-python-plugin.py
plans/: bug-verification-plan.md  ui-latency-improvement-plan.md
plugins/: README.adoc  justfile  pyproject.toml
plugins/plugins/: __init__.py  apt.py  atuin.py  base.py  calibre.py  cargo.py  conda_build.py  conda_clean.py  conda_packages.py  conda_self.py  flatpak.py  foot.py  go_packages.py  go_runtime.py  julia_packages.py  julia_runtime.py  lxc.py  mock_alpha.py  mock_beta.py  npm.py  pihole.py  pip.py  pipx.py  poetry.py  r.py  registry.py  repository.py  rustup.py  signing.py  snap.py  snap_store.py  spack.py  steam.py  texlive_packages.py  texlive_self.py  waterfox.py  youtube_dl.py  yt_dlp.py
plugins/plugins/mocks/: __init__.py  mock_alpha.py  mock_beta.py
plugins/plugins/scripts/: mock_check.sh  mock_download.sh  mock_execute.sh
plugins/tests/: __init__.py  test_declarative_execution.py  test_download.py  test_download_manager_integration.py  test_mutex_dependency_declaration.py  test_pipx_three_step.py  test_plugins.py  test_registry.py  test_repository.py  test_signing.py  test_snap.py  test_snap_store.py  test_split_plugins.py  test_sudo_declaration.py
scripts/: add_debug_logging.py  debug_app.py  debug_metrics_preservation.py  debug_phase_reset.py  debug_phase_stats.py  measure_ui_latency.py  poc_bug_verification.py  trace_phase_stats.py
stats/: README.adoc  justfile  pyproject.toml
stats/stats/: __init__.py  calculator.py  estimator.py  history.py
stats/stats/db/: __init__.py  connection.py  models.py  schema.py
stats/stats/ingestion/: __init__.py  collector.py  loader.py
stats/stats/modeling/: __init__.py  conformal.py  multi_target.py  preprocessing.py  trainer.py  validation.py
stats/stats/repository/: __init__.py  base.py  estimates.py  executions.py  metrics.py  runs.py
stats/stats/retrieval/: __init__.py  aggregations.py  queries.py
stats/tests/: __init__.py  conftest.py  test_estimator.py  test_history.py  test_stats.py
stats/tests/db/: __init__.py  test_connection.py  test_models.py  test_schema.py
stats/tests/ingestion/: test_collector.py  test_loader.py
stats/tests/modeling/: __init__.py  conftest.py  test_conformal.py  test_multi_target.py  test_preprocessing.py  test_trainer.py
stats/tests/repository/: test_estimates.py  test_executions.py  test_metrics.py  test_runs.py
stats/tests/retrieval/: test_aggregations.py  test_queries.py
ui/: README.adoc  justfile  pyproject.toml
ui/tests/: __init__.py  conftest.py  test_bug_verification.py  test_e2e_interactive_tabs.py  test_e2e_phase_stats_preservation.py  test_hot_keys.py  test_input_router.py  test_interactive_tabbed_run.py  test_key_bindings.py  test_known_issues.py  test_metrics_store.py  test_performance_benchmarks.py  test_phase_counter_reset.py  test_phase_status_bar.py  test_phase_status_bar_display.py  test_phase_tab.py  test_pty_manager.py  test_pty_session.py  test_regression_bugs.py  test_terminal_pane.py  test_terminal_screen.py  test_terminal_view.py  test_ui.py  test_ui_latency_measurement.py  test_ui_refresh_rate.py
ui/ui/: __init__.py  event_handler.py  input_router.py  interactive_tabbed_run.py  key_bindings.py  messages.py  metrics.py  models.py  panels.py  phase_controller.py  phase_status_bar.py  phase_tab.py  progress.py  pty_manager.py  pty_session.py  statistics_viewer.py  sudo.py  tabbed_run.py  tables.py  terminal_pane.py  terminal_screen.py  terminal_view.py
