[project]
name = "update-all-ui"
version = "0.12.2"
description = "Rich terminal UI components for update-all system"
readme = "README.adoc"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Update-All Team" }
]
keywords = ["update", "ui", "terminal", "rich", "progress"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/update-all/update-all"
Documentation = "https://github.com/update-all/update-all#readme"
Repository = "https://github.com/update-all/update-all"

[tool.poetry]
packages = [{ include = "ui" }]

[tool.poetry.dependencies]
python = "^3.11"
update-all-core = { path = "../core", develop = true }
rich = "^14.0"
# Pin Textual version range for API stability (Phase 3 - UI Integration)
# See docs/update-all-architecture-refinement-plan.md section 7.3.1
textual = ">=7.0.0,<8.0.0"
# Interactive tabs dependencies (Phase 1 - Core PTY Infrastructure)
# See docs/interactive-tabs-implementation-plan.md
pyte = "^0.8.2"
ptyprocess = "^0.7.0"
# Process metrics collection (UI Revision Plan - Phase 3 Status Bar)
# See docs/UI-revision-plan.md section 3.4
psutil = "^7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^6.0"
pytest-asyncio = "^1.3.0"
mypy = "^1.14"
ruff = "^0.14"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["ui", "core"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["ui"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
